--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,10 @@
         <h1>Predicting Credit Card Upgrade</h1>
         <form action = "/" method="post">
             <p>Please enter the no of purchases per month</p>
-            </p><input type = "number" name="purchases"></p>
+            </p><input type = "income" name="purchases"></p>
             <p>Please enter 1 if there is supplementary card, else 0</p>
-            <p><input type = "number" name="suppcard"</p>
-            <p><input type = "Submit" value = "Enter"</p>
+            <p><input type = "age" name="suppcard"</p>
+            <p><input type = "loan" value = "Enter"</p>
         </form>
         <p>CART: {{result1}}</p>
         <p>Random Forest: {{result2}}</p>
