--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,12 @@
     <body>
         <h1>Predicting Credit Card Upgrade</h1>
         <form action = "/" method="post">
-            <p>Please enter the no of purchases per month</p>
+            <p>Please enter your annual income </p>
             </p><input type = "income" name="purchases"></p>
-            <p>Please enter 1 if there is supplementary card, else 0</p>
-            <p><input type = "age" name="suppcard"</p>
-            <p><input type = "loan" value = "Enter"</p>
+            <p>Please enter age </p>
+            <p><input type = "age" name="age"</p>
+            <p>Please enter loan amount </p>
+            <p><input type = "loan" value = "loan"</p>
         </form>
         <p>CART: {{result1}}</p>
         <p>Random Forest: {{result2}}</p>
