--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <h1>Predicting Credit Card Upgrade</h1>
+        <h1>Predicting Credit Card Default</h1>
         <form action = "/" method="post">
             <p>Please enter your annual income </p>
             </p><input type = "income" name="purchases"></p>
