--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,10 @@
             <p>Please enter age </p>
             <p><input type = "age" name="age"</p>
             <p>Please enter loan amount </p>
-            <p><input type = "loan" value = "loan"</p>
+            <p><input type = "loan" value = "loan"</p>   
+            <p><input type = "submit" value = "submit"</p>
         </form>
+        
         <p>CART: {{result1}}</p>
         <p>Random Forest: {{result2}}</p>
         <p>XGBoost: {{result3}}</p>
