--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
         <h1>Predicting Credit Card Default</h1>
         <form action = "/" method="post">
             <p>Please enter your annual income </p>
-            </p><input type = "income" name="purchases"></p>
+            </p><input type = "income" name="income"></p>
             <p>Please enter age </p>
             <p><input type = "age" name="age"</p>
             <p>Please enter loan amount </p>
