--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,11 @@
         <h1>Predicting Credit Card Default</h1>
         <form action = "/" method="post">
             <p>Please enter your annual income </p>
-            </p><input type = "income" name="income"></p>
+            </p><input type = "number" name="income"></p>
             <p>Please enter age </p>
-            <p><input type = "age" name="age"</p>
+            <p><input type = "number" name="age"</p>
             <p>Please enter loan amount </p>
-            <p><input type = "loan" value = "loan"</p>   
+            <p><input type = "number" value = "loan"</p>   
             <p><input type = "submit" value = "submit"</p>
         </form>
         
